Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Fly by evolve2k</title>
+    <title>fly by evolve2k</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Fly</h1>
-        <h2>Fly is a quick command line executed flight search</h2>
+        <h1>fly</h1>
+        <h2>command line executed flight search</h2>
 
         <section id="downloads">
           <a href="https://github.com/evolve2k/fly/zipball/master" class="btn">Download as .zip</a>
@@ -28,29 +28,27 @@
 
     <div class="container">
       <section id="main_content">
-        <h1>Fly</h1>
+        <h1>fly</h1>
 
-<p>Fly is a quick command line executed flight search
-Flight commands open your default browser and execute on adioso.com</p>
+<p>Execute flight searches from the command line</p>
 
 <h2>Installation</h2>
 
-<p>Run 'fly'
-Set it up in your paths so it will run anywhere.</p>
+<p>I'm adding Homebrew support, for now just put the fly executable where you want it.</p>
 
 <h2>Usage</h2>
 
-<p>Fly just executes your search into the adioso.com flight search engine.</p>
+<p>Flight searches queries open your default browser and execute using the adioso.com flight search engine.</p>
 
-<p>At date of writing you can do the following:</p>
+<p>Try these Captain:</p>
 
-<p>Try these:
- $ fly to melbourne
- $ fly from adelaide to melbourne
- $ fly san fransisco late october
- $ fly bali in mid june
- $ fly somewhere warm
- $ fly anywhere friday afternoon</p>
+<pre><code>    $ fly to melbourne
+    $ fly from adelaide to melbourne
+    $ fly san fransisco late october
+    $ fly bali in mid june
+    $ fly somewhere warm
+    $ fly anywhere friday afternoon
+</code></pre>
       </section>
     </div>
 
