Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="main_content">
         <h1>fly</h1>
 
-<p>Execute flight searches from the command line</p>
+<p>Execute natural language flight searches from the command line</p>
 
 <h2>Installation</h2>
 
