Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
       <section id="main_content">
         <h1>fly</h1>
 
-<p>Natural language flight searches from the command line</p>
+<p>Natural language flight search from the command line</p>
 
 <h2>Installation</h2>
 
-<p>I'm adding Homebrew support, for now just put the fly executable where you want it.</p>
+<pre><code>brew install https://raw.github.com/evolve2k/fly/formula/fly.rb
+</code></pre>
 
 <h2>Usage</h2>
 
-<p>Flight searches queries open your default browser and execute using the adioso.com flight search engine.</p>
+<p>Flight search queries open your default browser and execute using the adioso.com flight search engine.</p>
 
 <p>Try these Captain:</p>
 
